src/app/common/components/marketing/styles/style-2.scss
@import '../../../../foundation/grid-values';

.m-marketing__main,
.m-marketing__section {
  &.m-marketing__section--style-2 {
    .m-marketing__wrapper {
      position: relative;
      z-index: 0;
      padding: 72px 0 0;
      margin-bottom: 95px;

      @media screen and (max-width: $m-grid-min-vp) {
        padding: 0;
        margin-bottom: 15px;
      }
    }

    .m-marketing__body {
      position: relative;

      @media screen and (max-width: $m-grid-min-vp) {
        padding: 0 30px 30px;
      }

      &::before {
        content: '';
        position: absolute;
        top: 0;
        right: -290px;
        bottom: -56px;
        left: 0;
        transform: translate(-86px, -56px);
        clip-path: polygon(0% 0%, 0% 100%, 100% 92%, 100% 0%);
        z-index: -1;

        @include m-theme() {
          background: linear-gradient(
            180deg,
            themed($m-marketing-bg-colored-gradient-start) 0%,
            themed($m-marketing-bg-colored-gradient-end) 99.99%
          );
        }

        @media screen and (max-width: $m-grid-max-mobile) {
          right: 0;
          bottom: -3vw;
          transform: none;
          clip-path: none;
        }
      }

      h1 {
        @include m-on-theme(dark) {
          color: #ffffff;
        }

        @media screen and (max-width: $m-grid-max-mobile) {
          margin: 15px 0 15px;
          text-align: center;
        }
      }

      h2 {
        @include m-on-theme(dark) {
          color: #ffffff;
        }

        @media screen and (max-width: $m-grid-max-mobile) {
          font-size: 28px;
          line-height: 32px;
          margin: 0 0 17px;
          text-align: center;
        }
      }
    }

    ul.m-marketing__points {
      li {
        @include m-theme() {
          color: themed($m-grey-300);
        }
      }
    }

    p.m-marketing__description {
      margin-bottom: 42px;

      @media screen and(min-width: $m-grid-max-tablet) {
        padding-right: 200px;
      }

      @media screen and(min-width: 900px) and (max-width: $m-grid-min-vp) {
        padding-right: 100px;
      }

      @media screen and(max-width: 900px) {
        padding-right: 0;
      }

      @include m-theme() {
        color: themed($m-grey-300);
      }

      @include m-on-theme(dark) {
        color: #ffffff;
      }

      @media screen and(min-width: $m-grid-max-mobile) and (max-width: $m-grid-min-vp) {
        font-size: 17px;
        line-height: 24px;
      }

      @media screen and (max-width: $m-grid-max-mobile) {
        padding-right: 0;
        margin-bottom: 30px;
        font-size: 16px;
        line-height: 23px;
        text-align: center;
      }
    }

    .m-marketing__image {
      position: relative;
      z-index: 0;

      img {
        object-fit: cover;
        width: 438px;
        height: 547px;
        clip-path: polygon(0% 1%, 0% 97%, 100% 100%, 100% 0%);

        @media screen and (max-width: $m-grid-max-mobile) {
          width: 100vw;
          height: 100vw;
          clip-path: polygon(0% 2%, 0% 97%, 100% 100%, 100% 0%);
        }
      }

      span {
        display: inline-block;
        position: relative;

        // Deco

        &::before {
          content: '';
          display: block;
          position: absolute;
          width: 393px;
          height: 193px;
          bottom: 0;
          right: 0;
          transform: translate(45px, 32px);
          background: url('<%= APP_CDN %>/assets/marketing/deco_1.svg')
            no-repeat;
          z-index: -1;

          @media screen and (max-width: $m-grid-max-mobile) {
            content: initial;
            display: none;
          }
        }

        &::after {
          content: '';
          display: block;
          position: absolute;
          top: 0;
          right: 0;
          width: 284px;
          height: 262px;
          transform: translate(35px, -35px);
          background: url('<%= APP_CDN %>/assets/marketing/deco_2-straight.svg')
            no-repeat;
          z-index: -1;

          @media screen and (max-width: $m-grid-max-mobile) {
            content: initial;
            display: none;
          }
        }
      }
    }
  }
}

